force-app/main/default/objects/Block_Pricing__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-60393</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>