force-app/main/default/objects/Block_Pricing__c/fields/Block_Pricing_Meter_Type__c.field-meta.xml
<CustomField>
    <fullName>Block_Pricing_Meter_Type__c</fullName>
    <label>Block Pricing Meter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meter_Type</valueSetName>
    </valueSet>
</CustomField>