force-app/main/default/objects/Block_Pricing__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>BIZ-60393</description>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FY25</fullName>
            </value>
            <value>
                <fullName>FY26</fullName>
            </value>
            <value>
                <fullName>FY27</fullName>
            </value>
            <value>
                <fullName>FY28</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>