force-app/main/default/objects/Block_Pricing__c/fields/meter_type_Corporate__c.field-meta.xml
<CustomField>
    <fullName>meter_type_Corporate__c</fullName>
    <description>BIZ-49623</description>
    <label>Corporate Meter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named Users</fullName>
            </value>
            <value>
                <fullName>Fee Earners</fullName>
            </value>
            <value>
                <fullName>Lawyers</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>no meter type</fullName>
            </value>
            <value>
                <fullName>Firmwide</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>