force-app/main/default/objects/Block_Pricing__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please update product code to update the product.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Block Pricings</relationshipLabel>
    <relationshipName>Block_Pricings</relationshipName>
    <type>Lookup</type>
</CustomField>