force-app/main/default/objects/Block_Pricing__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meter Type</fullName>
            </value>
            <value>
                <fullName>Employee Compliance</fullName>
            </value>
            <value>
                <fullName>Engagement Model</fullName>
            </value>
            <value>
                <fullName>GTM Motion Tier</fullName>
            </value>
            <value>
                <fullName>Account Tier</fullName>
                <isActive>false</isActive>
                <label>Account Tier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>