force-app/main/default/objects/Block_Pricing__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Product_Code__c</columns>
    <columns>Product__c</columns>
    <columns>NAME</columns>
    <columns>meter_type_Accounting__c</columns>
    <columns>meter_type_Consulting__c</columns>
    <columns>meter_type_Corporate__c</columns>
    <columns>meter_type_IBA__c</columns>
    <columns>meter_type_PCM__c</columns>
    <columns>meter_type_RealAssets__c</columns>
    <columns>Legal_meter_type_USD_AUD__c</columns>
    <columns>Legal__c</columns>
    <columns>Price_Book__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Employee Compliance</value>
    </filters>
    <label>All</label>
</ListView>