force-app/main/default/objects/Block_Pricing__c/listViews/GTM_Motion_Tier_Pricing.listView-meta.xml
<ListView>
    <fullName>GTM_Motion_Tier_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Lower_Bound__c</columns>
    <columns>Upper_Bound__c</columns>
    <columns>Block_Pricing_Meter_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Price__c</columns>
    <columns>Tier_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Price_Book__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Name1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>GTM Motion Tier</value>
    </filters>
    <filters>
        <field>Product_Code__c</field>
        <operation>equals</operation>
        <value>CO-01492</value>
    </filters>
    <filters>
        <field>Tier_Name__c</field>
        <operation>equals</operation>
        <value>EM1</value>
    </filters>
    <label>GTM Motion Tier Pricing</label>
</ListView>