force-app/main/default/objects/Block_Pricing__c/listViews/Quantity_Based_Pricing.listView-meta.xml
<ListView>
    <fullName>Quantity_Based_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Code_Formula__c</columns>
    <columns>Type__c</columns>
    <columns>Lower_Bound__c</columns>
    <columns>Upper_Bound__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Price__c</columns>
    <columns>Block_Pricing_Meter_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Employee Compliance</value>
    </filters>
    <filters>
        <field>Product_Code__c</field>
        <operation>equals</operation>
        <value>CC-01831</value>
    </filters>
    <label>Quantity Based Pricing</label>
</ListView>