force-app/main/default/objects/Block_Pricing__c/listViews/Tiered_Pricing_Revenue_Meter_type.listView-meta.xml
<ListView>
    <fullName>Tiered_Pricing_Revenue_Meter_type</fullName>
    <columns>NAME</columns>
    <columns>Product_Code_Formula__c</columns>
    <columns>Product__c</columns>
    <columns>Block_Pricing_Meter_Type__c</columns>
    <columns>Tier_Name__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Price__c</columns>
    <columns>Type__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Name1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>GTM Motion Tier</value>
    </filters>
    <filters>
        <field>Block_Pricing_Meter_Type__c</field>
        <operation>equals</operation>
        <value>Revenue</value>
    </filters>
    <label>Tiered Pricing Revenue Meter type</label>
</ListView>